[package]
edition = "2018"
name = "dap_types"
version = "1.0.0"
authors = ["Brice Dobry <brice@hiro.so>"]
description = "Types for interacting with a debugger, using the Debug Adapter Protocol"
documentation = "https://docs.rs/dap_types"
readme = "README.md"
keywords = ["dap", "debugger", "vscode"]
license = "MIT"
repository = "https://github.com/hirosystems/dap_types"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_derive = "1.0.136"
